# CMake_proj

./: .gitignore  CMakeLists.txt  MyClass.hpp  howto.txt  main.c  main.cpp
MyProgram/: CMakeLists.txt  MyClass.cpp  main.cpp
say-hello/: CMakeLists.txt
say-hello/src/say-hello/: hello.cpp  hello.hpp
